--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -68,8 +68,8 @@
 
 <p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version : <?php echo APP_VERSION_STABLE; ?></p>
 
-<h3><a href="/docs/upgrade#run-the-migration" id="migration">Running the Migration</a></h3>
-
+<h3><a href="/docs/upgrade#run-the-migration" id="migration">Running the Migration(Optional)</a></h3>
+<p>[Note: We'll follow this step if needed, As Example, you're upgrading from 0.7.x to 0.8.x] </p>
 <p>We can now start the migration. Navigate to the <b>appwrite</b> directory where your <b>docker-compose.yml</b> is present and run the following command</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
