--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -67,8 +67,10 @@
 <p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version : <?php echo APP_VERSION_STABLE; ?></p>
 
 <h3><a href="/docs/upgrade#run-the-migration" id="migration">Running the Migration</a></h3>
-<p>[Note:You do not need to run migration when upgrading to a minor version. For example, going from 0.13.0 to 0.13.2 would not require running migration.] </p>
-    
+<div class="notice margin-bottom">
+    <h3>Upgrading to a minor version</h3>
+    <p>You do not need to run migration when upgrading to a minor version. For example, going from 0.13.0 to 0.13.2 would not require running migration.</p>
+</div>    
 <p>We can now start the migration. Navigate to the <b>appwrite</b> directory where your <b>docker-compose.yml</b> is present and run the following command</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
