--- a/app/views/docs/events.phtml
+++ b/app/views/docs/events.phtml
@@ -3,7 +3,7 @@
 $events = $this->getParam('events', []);
 
 ?>
-<p>Appwrite provides a variety of events that allows your application to react to changes as they happen. A event will fire when a change occurs in your Appwrite project, like when a new user registers or a new file is uploaded to Appwrite. You can consume these events to trigger funtion executions, subscribe to changes in client applications using Appwrite Realtime, or integrate with server side applications using webhooks.</p>
+<p>Appwrite provides a variety of events that allows your application to react to changes as they happen. A event will fire when a change occurs in your Appwrite project, like when a new user registers or a new file is uploaded to Appwrite. You can subscribe to these events to with Appwrite <a href="/docs/functions">Functions</a>, <a href="/docs/realtime">Realtime</a>, or <a href="/docs/webhooks">Webhooks</a>.</p>
 
 <p>Appwrite events are very versatile, they can be as general or specific as you need. You can subscribe to events for specific resources using their ID or subscribe to changes of all resource of the same type by using a wild card character "*". You can also filter for events of specific actions like "create", "update", or "delete".</p>
 
@@ -143,3 +143,35 @@ $events = $this->getParam('events', []);
 </table>
 
 <h2 id="events-limitations"><a href="/docs/events#events-limitations">Known Limitations</a></h2>
+<p>When events fire, only existing subscriptions for that event will receive the update. If your client or server side integrations lose network connection temporarily, delivery of the event is not guaranteed.</p>
+<p>A change to a resource can cause multiple events to fire. For example adding a new document with ID "lion-king" to a collection called "movies" will cause all of the below events to fire.</p>
+<div class="ide margin-top-small" data-lang="json" data-lang-label="JSON">
+    <pre class="line-numbers"><code class="prism language-json" data-prism>{
+    "events": [
+        databases.default.collections.movies.documents.lion-king.create,
+        databases.*.collections.*.documents.*.create, 
+        databases.default.collections.*.documents.lion-king.create, 
+        databases.*.collections.*.documents.lion-king.create, 
+        databases.*.collections.movies.documents.lion-king.create, 
+        databases.default.collections.movies.documents.*.create, 
+        databases.*.collections.movies.documents.*.create, 
+        databases.default.collections.*.documents.*.create, 
+        databases.default.collections.movies.documents.lion-king, 
+        databases.*.collections.*.documents.*, 
+        databases.default.collections.*.documents.lion-king, 
+        databases.*.collections.*.documents.lion-king, 
+        databases.*.collections.movies.documents.lion-king, 
+        databases.default.collections.movies.documents.*, 
+        databases.*.collections.movies.documents.*, 
+        databases.default.collections.*.documents.*, 
+        databases.default.collections.movies, 
+        databases.*.collections.*, 
+        databases.default.collections.*, 
+        databases.*.collections.movies, 
+        databases.default, 
+        databases.*
+    ]
+}</code></pre>
+</div>
+<p>When designing function triggers or webhook integrations, beware of possible overlaping events. Function execution order is not dependent on type of event.</p>
+<p>Permissions apply to Appwrite events. When subscribing to event channels using Appwrite Realtime, you will only receive updates for resources to which you have read permissions.</p>
