less words = better

--- a/app/views/docs/events.phtml
+++ b/app/views/docs/events.phtml
@@ -5,9 +5,7 @@ $events = $this->getParam('events', []);
 ?>
 <p>Appwrite provides a variety of events that allows your application to react to changes as they happen. A event will fire when a change occurs in your Appwrite project, like when a new user registers or a new file is uploaded to Appwrite. You can subscribe to these events to with Appwrite <a href="/docs/functions">Functions</a>, <a href="/docs/realtime">Realtime</a>, or <a href="/docs/webhooks">Webhooks</a>.</p>
 
-<p>Appwrite events are very versatile, they can be as general or specific as you need. You can subscribe to events for specific resources using their ID or subscribe to changes of all resource of the same type by using a wild card character "*". You can also filter for events of specific actions like "create", "update", or "delete".</p>
-
-<p>You can find events for changes in the Storage, Databases, Functions, and Authentication services.</p>
+<p>You can subscribe to events for specific resources using their ID or subscribe to changes of all resource of the same type by using a wild card character "*". You can also filter for events of specific actions like "create", "update", or "delete". You can find a list of events for Storage, Databases, Functions, and Authentication services below.</p>
 
 <h2 id="storage-events"><a href="/docs/events#storage-events">Storage Service Events</a></h2>
 
