--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -118,7 +118,7 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
 
 <div class="notice margin-top-large margin-bottom-large">
     <h3>Permissions</h3>
-    <p>All subscriptions are secured by the <a href="/docs/permissions">permissions</a> offered by Appwrite, meaning a user will only receive updates to resources to which he has read permission.</p>
+    <p>All subscriptions are secured by the <a href="/docs/permissions">permissions system</a> offered by Appwrite, meaning a user will only receive updates to resources to which he has permission to read.</p>
     <p>Using <span class="tag">role:all</span> on read permissions will allow any client to receive updates.</p>
 </div>
 
@@ -410,11 +410,9 @@ subscription.close()</code></pre>
     "payload": {
         "field1": "lorem ipsum",
         "field2": [],
-        "$read": [
-            "user:627a958ded6424a98a9f"
-        ],
-        "$write": [
-            "user:627a958ded6424a98a9f"
+        "$permissions": [
+            "read(user:627a958ded6424a98a9f)",
+            "read(user:627a958ded6424a98a9f)"
         ],
         "$id": "627a95c0785cc5c7fff2",
         "$collection": "example-collection"
